minor improvements